2002-10-13  David Hampton  <hampton@employees.org>

	* src/scm/printing/print-check.scm: The check printing setup
	dialog is now called directly, instead of as a callback from the
	check printing code.

	* src/gnome/window-register.c (gnc_register_print_check_cb): Call
	the check printing setup dialog directly.

	* src/gnome/dialog-print-check.c
	(gnc_ui_print_compute_new_format): Give feedback on the format
	string being used. (gnc_ui_print_check_dialog_create): Rework for
	being called directly from the register code.  Now hiding instead
	of destroying the dialog, so remove hooks to remember state.  If
	the current register already has a print dialog open, reuse
	it. (gnc_ui_print_check_dialog_destroy): Hide the dialog instead
	of destroying it. (gnc_ui_print_check_dialog_ok_cb): Call the
	scheme printing code directly.

	* src/gnome/gw-gnc-spec.scm: Remove unneeded references to check
	printing.

2002-10-13  Joshua Sled  <jsled@asynchronous.org>

	* src/register/ledger-core/gnc-regwidget.c
	(gnc_register_create_tool_bar): Added support for tooltips to the
	toolbar of the gnc-regwidget
	(gnc_regWidget_new): Added support for conditionally disallowing
	various capabilities of the reg-widget, as scheduled transactions
	use of the regwidget requires.  Fixes Bug#95009.

2002-10-12  David Hampton  <hampton@employees.org>

	* src/scm/printing/print-check.scm (gnc:*stock-check-positions*):
	Move the bottom check up by 1/2 inch. #95016 (gnc:print-check):
	Actually print the memo field on the check. #95015

	* src/gnome/window-register.c (gnc_register_print_check_cb): Print
	the Notes field of the transaction, not the memo field of the
	split. #95015

	* src/gnome/dialog-print-check.c
	(gnc_ui_print_compute_new_format): Update the sample date value in
	the dialog box any time one of the controls is updated.
	(gnc_ui_print_check_format_changed_cb): New callback function.
	(gnc_ui_print_check_dialog_create): Update for new controls and