@@ -20,5 +20,4 @@ account_DATA = \
 
 EXTRA_DIST = \
   ${account_DATA} \
-  acctchrt_full.gnucash-xea \
   .cvsignore
