@@ -32,7 +32,7 @@ AC_PROG_CC
 
 GNUCASH_MAJOR_VERSION=1
 GNUCASH_MINOR_VERSION=7
-GNUCASH_MICRO_VERSION=0
+GNUCASH_MICRO_VERSION=1
 GNUCASH_VERSION=$GNUCASH_MAJOR_VERSION.$GNUCASH_MINOR_VERSION.$GNUCASH_MICRO_VERSION
 
 AC_SUBST(GNUCASH_MAJOR_VERSION)
