@@ -19,24 +19,14 @@ Group:     	Applications/Finance
 URL:            http://www.gnucash.org
 Source:    	http://www.gnucash.org/pub/gnucash/sources/stable/gnucash-%{PACKAGE_VERSION}.tar.gz
 BuildRoot: 	/var/tmp/gnucash-%version
-Requires:  	gnome-libs >= 1.2.0
-Buildrequires: 	gnome-libs-devel >= 1.2.0
-Requires:	gdk-pixbuf >= 0.2.5
-Buildrequires:	gdk-pixbuf-devel >= 0.2.5
-Requires:	gnome-print >= 0.21
-Buildrequires:	gnome-print-devel >= 0.21
-Requires:	guile >= 1.3.4
-Buildrequires:	guile-devel >= 1.3.4
-Requires:	gtkhtml >= 0.8
-Buildrequires:	gtkhtml-devel >= 0.8
-Requires:	Guppi >= 0.35.3
-Buildrequires:	Guppi-devel >= 0.35.3
-Requires:	g-wrap >= 1.3.1
-Buildrequires:	g-wrap-devel >= 1.3.1
-Requires:	umb-scheme >= 3.2
-Requires:	gal >= 0.8
-Buildrequires:	gal-devel >= 0.8
-Buildrequires:	libglade-devel >= 0.16
+Requires:  	gnome-libs >= 1.2.0, gdk-pixbuf >= 0.2.5, gnome-print >= 0.21
+Requires:	guile >= 1.3.4, gtkhtml >= 0.8, Guppi >= 0.35.3
+Requires:	g-wrap >= 1.3.2, umb-scheme >= 3.2, gal >= 0.8
+BuildPrereq: 	g-wrap-devel >= 1.3.2, gtkhtml-devel >= 0.8
+BuildPrereq: 	Guppi-devel, postgresql-devel, gal-devel, libxml-devel
+BuildPrereq: 	libglade-devel, libghttp-devel, python-devel, libtermcap-devel
+BuildPrereq: 	readline-devel
+Prereq: 	/sbin/ldconfig /sbin/install-info
 
 %description
 GnuCash is a personal finance manager. A check-book like
@@ -87,6 +77,17 @@ cp -p src/backend/postgres/README README.postgres
 
 %clean
 [ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
+
+%post
+/sbin/ldconfig
+/sbin/install-info %{_infodir}/gnucash-design.info.gz %{_infodir}/dir
+
+%postun
+/sbin/ldconfig
+if [ $1 = 0 ]; then
+   /sbin/install-info --delete %{_infodir}/gnucash-design.info.gz
+   %{_infodir}/dir
+fi
 
 %files -f %{name}.lang
 %defattr(444,root,root,755)
